--- a/app/src/main/res/layout/activity_adapter_list_view.xml
+++ b/app/src/main/res/layout/activity_adapter_list_view.xml
@@ -4,14 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="duarte.gabriel.maquina.MainActivity">
-
-    <Button
-        android:id="@+id/btnTeste"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ativar leitor"
-        tools:layout_editor_absoluteX="131dp"
-        tools:layout_editor_absoluteY="231dp" />
+    tools:context="duarte.gabriel.maquina.AdapterListView">
 
 </android.support.constraint.ConstraintLayout>
