--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_finalizar"
         android:title="Finalizar"
         android:icon="@android:drawable/ic_menu_save"
-        android:orderInCategory="100" />
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        />
 </menu>
