--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="duarte.gabriel.maquina.MainActivity">
+    tools:context="duarte.gabriel.maquina.MainActivity"
+    android:background="@drawable/radialback">
 
     <Button
         android:id="@+id/btnTeste"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="190dp"
+        android:background="@color/colorAccent"
+        android:text="Finalizar pedido"
+        android:textColor="@color/white"
+        tools:layout_editor_absoluteX="131dp"
+        tools:layout_editor_absoluteY="231dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ativar leitor"
-        tools:layout_editor_absoluteX="131dp"
-        tools:layout_editor_absoluteY="231dp"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="29dp"
+        app:srcCompat="@drawable/logo"
+        android:layout_above="@+id/btnTeste"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="11dp"
+        android:text="Developed by HackPuc 21"
+        android:textColor="@color/white" />
 
 </RelativeLayout>
