--- a/app/src/main/res/layout/activity_adapter_list_view.xml
+++ b/app/src/main/res/layout/activity_adapter_list_view.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="duarte2.gabriel2.maquina2.AdapterListView">
+    tools:context="br.com.smartbar.AdapterListView">
 
 </android.support.constraint.ConstraintLayout>
