--- a/app/src/main/res/layout/activity_finalizar_compra.xml
+++ b/app/src/main/res/layout/activity_finalizar_compra.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="duarte2.gabriel2.maquina2.FinalizarCompra"
+    tools:context="br.com.smartbar.FinalizarCompra"
     android:background="@drawable/radialback">
 
     <TextView
